--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,8 +1,8 @@
 <h1>Créditos</h1>
 
 <p>
-    Esta práctica ha sido desarrollada por LeChuck.
+    Esta práctica ha sido desarrollada por Daniel Pérez Felipe
 </p>
 
-<img src="/images/lechuck.jpg" />
+<img src="/images/2046.jpg" />
 
