--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,7 +1,9 @@
 <h1>Créditos</h1>
 
 <p>
-    Esta práctica ha sido desarrollada por Daniel Pérez Felipe
+    Esta práctica ha sido desarrollada por Daniel Pérez Felipe.</p> 
+
+<p>Cuenta en Github: <a href="https://github.com/dpfar/quiz_2017">enlace </a>
 </p>
 
 <img src="/images/2046.jpg" />
