Mod mejor practica51 correcion

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -5,6 +5,7 @@
 
 <p>Cuenta en Github: <a href="https://github.com/dpfar/quiz_2017">enlace </a>
 </p>
+<a href="/help">/help</a>
 
 <img src="/images/2046.jpg" />
 
